--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
+    "@react-navigation/stack": "^6.3.20",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.17",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo": "^49.0.21"
   },
   "private": true
 }
