--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios"
+    "ios": "expo start --ios",
+    "build": "expo build"
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.17",
