--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "build": "expo build"
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "build": "npx expo build"
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.17",
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo": "^49.0.21"
+    "expo": "^49.0.21",
+    "expo-cli": "^6.3.10"
   },
   "private": true
 }
